--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
 
     </head>
-
+                        <!-- This is the start file -->
     <body>
         <div>
             <iframe id="indexPanel" src="main.html" width="100%" height="100%" frameborder="0"></iframe>
